--- a/BuilderPattern/BuilderPattern/BuilderPattern.csproj
+++ b/BuilderPattern/BuilderPattern/BuilderPattern.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{2A70B591-90D3-4B53-8D83-9E74210CDDAF}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>BuilderMode</RootNamespace>
-    <AssemblyName>BuilderMode</AssemblyName>
+    <RootNamespace>BuilderPattern</RootNamespace>
+    <AssemblyName>BuilderPattern</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
